--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,16 @@
 html{
   background-color: goldenrod;
 }
+table{
+  width: 70%;
+  margin: 0 auto;
+  border-collapse: collapse;
+}
+tr, td {
+  border: 1px solid black;
+}
+
+td{
+  width:25%;
+  text-align: center; 
+}
